Install jq for secrets export

--- a/.github/workflows/run-scenario.yml
+++ b/.github/workflows/run-scenario.yml
@@ -57,6 +57,9 @@ jobs:
       - name: Create output directory
         run: mkdir -p output && chmod 777 output
 
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
       - name: Export secrets as environment variables
         env:
           SECRETS_JSON: ${{ toJSON(secrets) }}
