--- a/scenario.toml
+++ b/scenario.toml
@@ -2,15 +2,11 @@
 agentbeats_id = "019bd1bd-7774-73f1-b645-b192f262e843"
 
 [[participants]]
-agentbeats_id = "YOUR_AGENTBEATS_ID"  # Users must replace this when forking
-name = "comtrade_agent"
+agentbeats_id = "019bd217-12bc-7ba0-9ef6-44370aba46a2"
+name = "purple-comtrade-baseline-v2"
 env = {}
 
 [config]
-# Tasks to run (default: all T1-T7)
-# Available tasks: T1_single_page, T2_multi_page, T3_duplicates,
-#                  T4_rate_limit_429, T5_server_error_500,
-#                  T6_page_drift, T7_totals_trap
 tasks = [
   "T1_single_page",
   "T2_multi_page",
@@ -20,6 +16,3 @@ tasks = [
   "T6_page_drift",
   "T7_totals_trap"
 ]
-
-# Example: Run only specific tasks
-# tasks = ["T1_single_page", "T2_multi_page", "T4_rate_limit_429"]
