--- a/scenario.ci.toml
+++ b/scenario.ci.toml
@@ -1,8 +1,7 @@
-# Default scenario for local development
-# CI uses scenario.ci.toml (triggered by workflow on push to scenario.ci.toml)
+# CI scenario - uses agentbeats_id for all agents (required by GitHub Actions)
 
 [green_agent]
-image = "ghcr.io/yonghongzhang-io/green-comtrade-bench-v2:latest"
+agentbeats_id = "019bd1bd-7774-73f1-b645-b192f262e843"
 
 [[participants]]
 agentbeats_id = "019bd217-12bc-7ba0-9ef6-44370aba46a2"
