--- a/.github/workflows/run-scenario.yml
+++ b/.github/workflows/run-scenario.yml
@@ -64,8 +64,12 @@ jobs:
           print("Patched docker-compose.yml: set agentbeats-client entrypoint")
           PY
 
-      - name: Login to GHCR (pre-pull)
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Pull images
         run: |
