--- a/.github/workflows/run-scenario.yml
+++ b/.github/workflows/run-scenario.yml
@@ -61,19 +61,28 @@ jobs:
               raise SystemExit("agentbeats-client service not found in docker-compose.yml")
 
           # Force entrypoint and command for agentbeats-client
-          svc["entrypoint"] = ["python", "client_cli.py"]
+          # Use module invocation since client_cli.py is part of agentbeats_tutorial package
+          svc["entrypoint"] = ["python", "-m", "agentbeats_tutorial.client_cli"]
           svc["command"] = ["scenario.ci.toml", "output/results.json"]
 
           with open(path, "w", encoding="utf-8") as f:
               yaml.safe_dump(data, f, sort_keys=False)
 
-          print("Patched docker-compose.yml: entrypoint=python client_cli.py, command=scenario.ci.toml output/results.json")
+          print("Patched docker-compose.yml: entrypoint=python -m agentbeats_tutorial.client_cli")
           PY
 
       - name: Debug docker-compose.yml
         run: |
+          echo "===== agentbeats-client (after patch) ====="
+          python - <<'PY'
+          import yaml
+          with open("docker-compose.yml") as f:
+              data = yaml.safe_load(f)
+          svc = data.get("services", {}).get("agentbeats-client", {})
+          print(yaml.safe_dump({"agentbeats-client": svc}, sort_keys=False))
+          PY
           echo "===== docker-compose.yml (after patch) ====="
-          cat docker-compose.yml
+          sed -n '1,200p' docker-compose.yml
           echo "==========================================="
 
       - name: Check GHCR_TOKEN is set
