--- a/.github/workflows/run-scenario.yml
+++ b/.github/workflows/run-scenario.yml
@@ -11,15 +11,15 @@ on:
 
 env:
   # Pin image SHAs to avoid stale :latest tags
-  GREEN_SHA: "fc1160d2563958b6842a55a2e123a2c46ea879a4"
-  PURPLE_SHA: "fdfbbff7fad42eae7e4d88b4b9120feaa2ab7514"
+  GREEN_SHA: "fc1160d"
+  PURPLE_SHA: "653d7a3"
 
 jobs:
   run:
     runs-on: ubuntu-latest
     env:
-      GREEN_IMAGE: ghcr.io/yonghongzhang-io/green-comtrade-bench-v2:fc1160d2563958b6842a55a2e123a2c46ea879a4
-      PURPLE_IMAGE: ghcr.io/yonghongzhang-io/purple-comtrade-baseline-v2:fdfbbff7fad42eae7e4d88b4b9120feaa2ab7514
+      GREEN_IMAGE: ghcr.io/yonghongzhang-io/green-comtrade-bench-v2:latest
+      PURPLE_IMAGE: ghcr.io/yonghongzhang-io/purple-comtrade-baseline-v2:latest
     if: github.event.repository.fork == true || github.ref == 'refs/heads/main'
     permissions:
       contents: write
